--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -19,6 +19,8 @@
     <None Remove="Data\day6testinput.txt" />
     <None Remove="Data\day7input.txt" />
     <None Remove="Data\day7testinput.txt" />
+    <None Remove="Data\day8input.txt" />
+    <None Remove="Data\day8testinput.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -65,6 +67,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\day7testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\day8input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\day8testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
