Prepared the template for the rest of the 12 days. Renamed folders so double digit days will be in chronological order.

--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -21,6 +21,8 @@
     <None Remove="Data\day7testinput.txt" />
     <None Remove="Data\day8input.txt" />
     <None Remove="Data\day8testinput.txt" />
+    <None Remove="Data\day9input.txt" />
+    <None Remove="Data\day9testinput.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -73,6 +75,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\day8testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\day9input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\day9testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
