Day 4 Part One Done

--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -12,6 +12,7 @@
     <None Remove="Data\2015\day01input.txt" />
     <None Remove="Data\2015\day02input.txt" />
     <None Remove="Data\2015\day03input.txt" />
+    <None Remove="Data\2015\day04input.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -43,6 +44,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day03input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day04input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
