--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -18,6 +18,8 @@
     <None Remove="Data\2015\day07input.txt" />
     <None Remove="Data\2015\day07testinput.txt" />
     <None Remove="Data\2015\day08input.txt" />
+    <None Remove="Data\2015\day09input.txt" />
+    <None Remove="Data\2015\day09testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -67,6 +69,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day08input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day09input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day09testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
