--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -21,6 +21,7 @@
     <None Remove="Data\2015\day09input.txt" />
     <None Remove="Data\2015\day09testinput.txt" />
     <None Remove="Data\2015\day10input.txt" />
+    <None Remove="Data\2015\day11input.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -79,6 +80,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day10input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day11input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
