Solved 2015 day 12. (use a JSON parser, then recursively sum element numbers).

--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -23,6 +23,8 @@
     <None Remove="Data\2015\day10input.txt" />
     <None Remove="Data\2015\day11input.txt" />
     <None Remove="Data\2015\day12input.txt" />
+    <None Remove="Data\2015\day13input.txt" />
+    <None Remove="Data\2015\day13testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -87,6 +89,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day12input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day13input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day13testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
@@ -171,6 +179,10 @@
 
   <ItemGroup>
     <PackageReference Include="Google.OrTools" Version="9.14.6206" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Days\2015\13\" />
   </ItemGroup>
 
 </Project>
