Solved Y2015Day15 (im so sorry, i promise to do better from now on)

--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -27,6 +27,8 @@
     <None Remove="Data\2015\day13testinput.txt" />
     <None Remove="Data\2015\day14input.txt" />
     <None Remove="Data\2015\day14testinput.txt" />
+    <None Remove="Data\2015\day15input.txt" />
+    <None Remove="Data\2015\day15testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -103,6 +105,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day14testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day15input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day15testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
