--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -30,6 +30,7 @@
     <None Remove="Data\2015\day15input.txt" />
     <None Remove="Data\2015\day15testinput.txt" />
     <None Remove="Data\2015\day16input.txt" />
+    <None Remove="Data\2015\day17input.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -115,6 +116,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day16input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day17input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
