--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -32,6 +32,8 @@
     <None Remove="Data\2015\day16input.txt" />
     <None Remove="Data\2015\day17input.txt" />
     <None Remove="Data\2015\day18input.txt" />
+    <None Remove="Data\2015\day19input.txt" />
+    <None Remove="Data\2015\day19testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -123,6 +125,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day18input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day19input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day19testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
