--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -34,6 +34,7 @@
     <None Remove="Data\2015\day18input.txt" />
     <None Remove="Data\2015\day19input.txt" />
     <None Remove="Data\2015\day19testinput.txt" />
+    <None Remove="Data\2015\day20input.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -131,6 +132,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day19testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day20input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
