--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -37,6 +37,7 @@
     <None Remove="Data\2015\day20input.txt" />
     <None Remove="Data\2015\day21input.txt" />
     <None Remove="Data\2015\day22input.txt" />
+    <None Remove="Data\2015\day23input.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -143,6 +144,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day22input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day23input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
