Solved Y2015Day25 (merry christmas, algebra, sum of integers)

--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -39,6 +39,7 @@
     <None Remove="Data\2015\day22input.txt" />
     <None Remove="Data\2015\day23input.txt" />
     <None Remove="Data\2015\day24input.txt" />
+    <None Remove="Data\2015\day25input.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -154,6 +155,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day23input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2015\day25input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
