--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -40,6 +40,7 @@
     <None Remove="Data\2015\day23input.txt" />
     <None Remove="Data\2015\day24input.txt" />
     <None Remove="Data\2015\day25input.txt" />
+    <None Remove="Data\2016\day01input.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -158,6 +159,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2015\day25input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day01input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
