--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -43,6 +43,9 @@
     <None Remove="Data\2016\day01input.txt" />
     <None Remove="Data\2016\day02input.txt" />
     <None Remove="Data\2016\day02testinput.txt" />
+    <None Remove="Data\2016\day03input.txt" />
+    <None Remove="Data\2016\day04input.txt" />
+    <None Remove="Data\2016\day04testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -170,6 +173,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2016\day02testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day03input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day04input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day04testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
