Y2016Day05 solved (just do it).

--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -46,6 +46,8 @@
     <None Remove="Data\2016\day03input.txt" />
     <None Remove="Data\2016\day04input.txt" />
     <None Remove="Data\2016\day04testinput.txt" />
+    <None Remove="Data\2016\day05input.txt" />
+    <None Remove="Data\2016\day05testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -182,6 +184,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2016\day04testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day05input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day05testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
