Y2016Day07 solved (just do it).

--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -50,6 +50,8 @@
     <None Remove="Data\2016\day05testinput.txt" />
     <None Remove="Data\2016\day06input.txt" />
     <None Remove="Data\2016\day06testinput.txt" />
+    <None Remove="Data\2016\day07input.txt" />
+    <None Remove="Data\2016\day07testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -198,6 +200,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2016\day06testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day07input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day07testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
