Y2016Day08 solved (just do it)

--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -52,6 +52,8 @@
     <None Remove="Data\2016\day06testinput.txt" />
     <None Remove="Data\2016\day07input.txt" />
     <None Remove="Data\2016\day07testinput.txt" />
+    <None Remove="Data\2016\day08input.txt" />
+    <None Remove="Data\2016\day08testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -206,6 +208,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2016\day07testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day08input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day08testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
