--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -54,6 +54,8 @@
     <None Remove="Data\2016\day07testinput.txt" />
     <None Remove="Data\2016\day08input.txt" />
     <None Remove="Data\2016\day08testinput.txt" />
+    <None Remove="Data\2016\day09input.txt" />
+    <None Remove="Data\2016\day09testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -214,6 +216,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2016\day08testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day09input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day09testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
