--- a/C#/AoC/AoC.csproj
+++ b/C#/AoC/AoC.csproj
@@ -56,6 +56,8 @@
     <None Remove="Data\2016\day08testinput.txt" />
     <None Remove="Data\2016\day09input.txt" />
     <None Remove="Data\2016\day09testinput.txt" />
+    <None Remove="Data\2016\day10input.txt" />
+    <None Remove="Data\2016\day10testinput.txt" />
     <None Remove="Data\day10input.txt" />
     <None Remove="Data\day10testinput.txt" />
     <None Remove="Data\day11input.txt" />
@@ -222,6 +224,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2016\day09testinput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day10input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\2016\day10testinput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\2025\day10input.txt">
